infrastructure/argocd-ingress/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.CLUSTER_NAME.DOMAIN`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443 # The port your backend service is listening on for HTTPS
          scheme: https
          serversTransport: argocd-server-insecure-transport
  tls:
    secretName: argocd-server-tls # Assumes a Kubernetes secret for TLS certs exists
